--- a/framework/index.html
+++ b/framework/index.html
@@ -1,12 +1,12 @@
 <html>
     <head>
         <!-- This is the .by action code library -->
-        <script src='system/library.js'></script>
+        <script src='https://tiger.baileo.us/1.5.0/library.js'></script>
 
         <!-- This section will be erased after the page is loaded on the client side -->
         <div id='backbone'>
-            <script src='system/compile.js'></script>
-            <script src='system/main.js'></script>
+            <script src='https://tiger.baileo.us/1.5.0/compile.js'></script>
+            <script src='https://tiger.baileo.us/1.5.0/main.js'></script>
         </div>
         
         <!-- Insert your scripts here -->
