--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
     <head>
         <!-- This section will be erased after the page is loaded on the client side -->
         <div id='backbone'>
-            <script src='https://tiger.baileo.us/1.5.5/compile.js'></script>
+            <script src='1.5.5/compile.js'></script>
         </div>
         
         <!-- Insert your scripts here -->
         <script src='scripts/index.js'></script>
+
+        <meta name='html_page_identifier'>
     </head>
     <!-- This is the true body of the document, set to display: none so content is only shown when fully converted to HTML -->
     <body id='bodyDOM' style='display:none;'>
