--- a/test/index.html
+++ b/test/index.html
@@ -1,19 +1,10 @@
 <html>
     <head>
-        <!-- This section will be erased after the page is loaded on the client side -->
         <div id='backbone'>
-            <script src='../1.5.5/compile.js'></script>
-            <!-- Version 1.5.5 is the stable version of the Javascript Engine -->
+            <script src='../latest/compile.js'></script>
         </div>
-        
-        <!-- Insert your scripts here -->
         <script src='scripts/index.js'></script>
-
     </head>
-    <!-- This is the true body of the document, set to display: none so content is only shown when fully converted to HTML -->
-    <body id='bodyDOM' style='display:none;'>
-        <div id='body'>
-            <!-- The body content declared in the .by file will be inserted here -->
-        </div>
+    <body style='display:none;'>
     </body>
 </html>
