--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <!-- This section will be erased after the page is loaded on the client side -->
         <div id='backbone'>
-            <script src='../1.7/compile.js'></script>
+            <script src='1.7/compile.js'></script>
         </div>
         
         <!-- Insert your scripts here -->
