--- a/testing/index.html
+++ b/testing/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>.TGR 3.0</title>
 
+    <link rel="stylesheet" href="style/main.css">
+
     <script src="../3.0/compile.js"></script>
+    <script src="main.js"></script>
 </head>
 <body>
 </body>
